--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&family=Noto+Serif+KR:wght@300;400;500&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500&family=Noto+Serif+KR:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Noto+Sans+KR:wght@300;400;500&family=Noto+Serif+KR:wght@300;400;500&display=swap");
 html,
 body,
 h1,
@@ -63,7 +63,7 @@ a {
 
 .clear::after {
   display: block;
-  content: '';
+  content: "";
   clear: both;
 }
 
